Cleaner solution with streams